<resources>
    <string name="app_name">Strikers_Tr</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="teams">Teams</string>
    <string name="tournament">Tournament</string>
    <string name="games">Games</string>
    <string name="follow">Follow</string>
    <string name="top_games">Top Games</string>
    <string name="strikers_news">Strikers News</string>
    <string name="get_started">Get started</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="strickers_news">Strickers News</string>
    <string name="open_chat">Open Chat</string>
    <string name="join_now">Join Now!</string>
    <string name="view">View</string>
    <string name="winners">Winners</string>
    <string name="comunity">Comunity</string>
    <string name="news">News</string>
    <string name="top_players_amp_teams"><![CDATA[Top players & Teams]]></string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="start_chat">Start chat</string>
</resources>