<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/base_toolbar"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:background="@color/transparent_bg"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/group_5"
            android:contentDescription="@string/logo" />
    </androidx.appcompat.widget.Toolbar>

<!--    <androidx.viewpager2.widget.ViewPager2-->
<!--        android:id="@+id/main_viewPager"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_weight="1"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/toolbar" />-->

    <fragment
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/base_toolbar"
        app:navGraph="@navigation/navigation_tabs" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:background="@drawable/bottom_bar_menu_bg"
        android:orientation="horizontal"
        android:paddingBottom="32dp"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <View
                android:id="@+id/view"
                android:layout_width="29dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/pinkish_red" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:src="@drawable/home_pressed" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/home"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/bottom_bar_text_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <View
                android:id="@+id/view_games"
                android:layout_width="29dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/pinkish_red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:src="@drawable/games_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/games"
                android:textAlignment="center"
                android:textColor="@color/brown_grey_three"
                android:textSize="@dimen/bottom_bar_text_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <View
                android:id="@+id/view_tournaments"
                android:layout_width="29dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/pinkish_red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:src="@drawable/tournaments_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tournament"
                android:textAlignment="center"
                android:textColor="@color/brown_grey_three"
                android:textSize="@dimen/bottom_bar_text_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <View
                android:id="@+id/view_teams"
                android:layout_width="29dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/pinkish_red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:src="@drawable/teams_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/teams"
                android:textAlignment="center"
                android:textColor="@color/brown_grey_three"
                android:textSize="@dimen/bottom_bar_text_font_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:orientation="vertical">

            <View
                android:id="@+id/view_messages"
                android:layout_width="29dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/pinkish_red"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="6dp"
                android:src="@drawable/messages_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/messages"
                android:textAlignment="center"
                android:textColor="@color/brown_grey_three"
                android:textSize="@dimen/bottom_bar_text_font_size" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>